# Key-Vault

./: .dockerignore  .gitignore  README.md  package-lock.json
.github/workflows/: pytest.yml
backend/: Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 015d050b2728_cria_novos_models.py  17827d32fcaf_create_licenses_table.py  266787f27034_implementa_logica_de_excluir_tabelas.py  65ca3ec333da_create_users_table.py
backend/src/: app.py  exceptions.py
backend/src/database/: __init__.py
backend/src/enums/: __init__.py  audit_action.py  license_priority.py  license_status.py  license_type.py  request_status.py  user_role.py
backend/src/exceptions/: __init__.py  auth.py  base.py  license.py  license_exceptions.py  renewal_request.py  users.py
backend/src/models/: __init__.py  audit_log.py  license.py  notification.py  renewal_request.py  user.py
backend/src/routes/: __init__.py  auth.py  license_routes.py  renewal_requests.py  users.py
backend/src/schemas/: __init__.py  license.py  renewal_request.py  token.py  user.py
backend/src/security/: __init__.py  auth.py  hashing.py  jwt.py  verify_license.py
backend/src/services/: __init__.py  auth_service.py  license_service.py  renewal_requests.py  user_service.py
backend/src/settings/: __init__.py  settings.py
backend/src/types/: __init__.py  dependencies.py  filters.py  password.py
backend/tests/: conftest.py  helpers.py  test_app.py  test_audit_log.py  test_auth.py  test_jwt.py  test_licenses.py  test_models.py  test_models_license.py  test_models_notification.py  test_models_request.py  test_models_user.py  test_security.py  test_token.py  test_users.py
backend/tests/factory/: __init__.py  license_factory.py  user_factory.py
backend/tests/utils/: __init__.py
codigo_criar_dados/: audit_logs.py  licenses.py  notifications.py  renewal_requests.py  users.py
deploy/: compose.yaml
docs/: index.html  produto.html  styles.css
frontend/: README.md  cadastro.html  index.html  jest.config.js  login.js  package-lock.json  package.json  redefinir-senha.html  vite.config.js
frontend/css/: style.css
frontend/src/: App.css  App.jsx  index.css  main.jsx  routes.jsx  user-license.css  user-license.jsx
frontend/src/api/: index.jsx  interceptors.jsx  tokenService.jsx
frontend/src/components/: Footer.jsx  Header.jsx  LicenseDetail.jsx  LicenseList.css  LicenseList.jsx
frontend/src/pages/: AddLicense.jsx  AddUser.jsx  Approval.jsx  ChangePassword.jsx  CreateLicense.jsx  CreateUser.jsx  EditLicense.jsx  EditUser.jsx  Initial.jsx  LicenseDetail.jsx  LicenseList.jsx  LicenseList.tsx  Login.jsx  MyAccount.jsx  Notifications.jsx  Purchase.jsx  RenewalDetail.jsx  Renewals.jsx  Requests.jsx  RequestsOptions.jsx  UsersDetail.jsx  UsersList.tsx  initial.tsx
frontend/src/pages/Notifications/: Notifications.jsx
frontend/src/pages/RenewalDetail/: RenewalDetail.jsx
frontend/src/pages/Renewals/: Renewals.jsx
frontend/src/pages/UsersDetail/: UsersDetail.jsx
frontend/src/pages/UsersList/: UsersList.tsx
frontend/src/pages/users/: UserList.tsx
frontend/src/styles/: LicenseList.css  style.css  styles.css
nginx/: Dockerfile  nginx.conf
